@@ -1,24 +1,0 @@
-#!/sbin/runscript
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openvswitch/files/ovs-vswitchd,v 1.2 2012/07/18 08:41:29 dev-zero Exp $
-
-depend() {
-	use ovsdb-server
-}
-
-start() {
-	checkpath -d "/var/run/openvswitch" -m 0750
-
-	ebegin "Starting Open vSwitch daemon"
-	start-stop-daemon \
-		--start --quiet --pidfile "/var/run/openvswitch/ovs-vswitchd.pid" \
-		--exec /usr/sbin/ovs-vswitchd -- --pidfile --detach --monitor ${OPTIONS} ${DATABASE}
-	eend $?
-}
-
-stop() {
-	ebegin "Stopping Open vSwitch daemon"
-	start-stop-daemon --stop --quiet --pidfile "/var/run/openvswitch/ovs-vswitchd.pid"
-	eend $?
-}
