@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/openvswitch
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openvswitch/ChangeLog,v 1.5 2013/04/08 19:37:58 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openvswitch/ChangeLog,v 1.6 2013/04/09 15:37:58 dev-zero Exp $
+
+  09 Apr 2013; Tiziano Müller <dev-zero@gentoo.org> -files/ovs-controller,
+  -files/ovs-vswitchd, -files/ovsdb-server, -openvswitch-1.6.1-r2.ebuild:
+  Drop old vulnerable version (bug #431744/CVE-2012-3449).
 
 *openvswitch-1.9.0 (08 Apr 2013)
 
